--- a/html/home.html
+++ b/html/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Welcome to India Town!</title>
+	<title>Welcome to Italy Town!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
   	<link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'>
   	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
